--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,26 @@
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
-#spring.datasource.url=jdbc:h2:mem:homebanking
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:homebanking
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/homebanking
-
-spring.datasource.username=homebankingapp
-
-spring.datasource.password=homebankingapp
-
-#dialecto de Hibernate que se utilizará para interactuar con la base de datos PostgreSQL
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
-
-#para generar automáticamente el esquema de base de datos (ddl Data Definition Language, Lenguaje de Definición de Datos)
-#comandos ddl (create, alter, drop)
-spring.jpa.generate-ddl=true
-
-#deshabilitar la generación automática del esquema de la base de datos por parte de Hibernate
-spring.jpa.hibernate.ddl-auto=none
-
-spring.data.rest.base-path=/rest
-
-#la salida JSON generada por Jackson se formateará con indentación
-spring.jackson.serialization.INDENT_OUTPUT=true
+#spring.datasource.url=jdbc:postgresql://localhost:5432/homebanking
+#
+#spring.datasource.username=homebankingapp
+#
+#spring.datasource.password=homebankingapp
+#
+##dialecto de Hibernate que se utilizará para interactuar con la base de datos PostgreSQL
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+#
+##para generar automáticamente el esquema de base de datos (ddl Data Definition Language, Lenguaje de Definición de Datos)
+##comandos ddl (create, alter, drop)
+#spring.jpa.generate-ddl=true
+#
+##deshabilitar la generación automática del esquema de la base de datos por parte de Hibernate
+#spring.jpa.hibernate.ddl-auto=none
+#
+#spring.data.rest.base-path=/rest
+#
+##la salida JSON generada por Jackson se formateará con indentación
+#spring.jackson.serialization.INDENT_OUTPUT=true
 
 server.address = 0.0.0.0
