--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-//	runtimeOnly 'com.h2database:h2'
-	implementation 'org.postgresql:postgresql'
+	runtimeOnly 'com.h2database:h2'
+//	implementation 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 //	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.12.3'
 }
@@ -30,9 +30,9 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
-
-jar {
-	manifest {
-		attributes 'Main-Class': 'HomebankingApplication'
-	}
-}
+//
+//jar {
+//	manifest {
+//		attributes 'Main-Class': 'HomebankingApplication'
+//	}
+//}
