--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,6 @@ tasks.named('test') {
 
 jar {
 	manifest {
-		attributes 'Main-Class': 'com.mindhub.homebanking'
+		attributes 'Main-Class': 'com.mindhub.homebanking.HomebankingApplication'
 	}
 }
