--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ bootRun {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.8'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -31,8 +31,3 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
-jar {
-	manifest {
-		attributes 'Main-Class': 'com.mindhub.homebanking.HomebankingApplication'
-	}
-}
