--- a/DockerFile
+++ b/DockerFile
@@ -1,5 +1,5 @@
-FROM gradle: 7.6-jdk11-alpine
+FROM gradle:7.6-jdk11-alpine
 COPY . .
 RUN gradle build
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar","build/libs/homebanking-0-0-1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-jar","build/libs/homebanking-0.0.1-SNAPSHOT.jar"]
